Fix billing details display on IE

--- a/media/2011/css/main.css
+++ b/media/2011/css/main.css
@@ -326,6 +326,7 @@ article p a {
 
 #billing-details {
     display: none;
+    clear: both;
 }
 #registration form {
     margin-top: 50px;
